--- a/packrunner.cabal
+++ b/packrunner.cabal
@@ -1,7 +1,7 @@
 name:                packrunner
 version:             0.1.0.0
--- synopsis:
--- description:
+synopsis: prpr command [arguments]
+description: Packrunner is a simple, purely functional package manager which is inspired by port utility and `nix` package manager system.
 homepage:            https://github.com/zypeh/packrunner#readme
 license:             Apache-2.0
 license-file:        LICENSE
@@ -19,7 +19,7 @@ library
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-executable packrunner
+executable prpr
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
