--- a/packrunner.cabal
+++ b/packrunner.cabal
@@ -1,7 +1,7 @@
 name:                packrunner
 version:             0.1.0.0
-synopsis: prpr command [arguments]
-description: Packrunner is a simple, purely functional package manager which is inspired by port utility and `nix` package manager system.
+synopsis:            prpr command [arguments]
+description:         Packrunner is a simple, purely functional package manager which is inspired by port utility and `nix` package manager system.
 homepage:            https://github.com/zypeh/packrunner#readme
 license:             Apache-2.0
 license-file:        LICENSE
@@ -15,7 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Packrunner
+  other-modules:       Paths_packrunner
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
