--- a/packrunner.cabal
+++ b/packrunner.cabal
@@ -16,8 +16,12 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Packrunner
+                     , Packrunner.Pull
   other-modules:       Paths_packrunner
   build-depends:       base >= 4.7 && < 5
+                     , bytestring
+                     , download
+                     , either-unwrap
   default-language:    Haskell2010
 
 executable prpr
@@ -26,15 +30,6 @@ executable prpr
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , packrunner
-  default-language:    Haskell2010
-
-test-suite simple-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , simple
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
