--- a/package.yaml
+++ b/package.yaml
@@ -8,7 +8,6 @@ copyright:           "BSD-2"
 
 extra-source-files:
 - README.md
-- ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -24,6 +23,7 @@ dependencies:
 - bytestring
 - download
 - either-unwrap
+- dhall
 
 library:
   source-dirs: src
